# Gizmo

./: .gitignore  CMakeLists.txt  CreateGizmo.bat  Gizmo.csproj  Gizmo.sln  Program.cs  README.md  codeGenerator.cpp  codeGenerator.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
Gizmo/: Gizmo.csproj  Program.cs
Gizmo/GizmoCompiler/: dllmain.cpp
Gizmo/GizmoCompiler/Debug/: GizmoCompiler.dll.recipe
Gizmo/GizmoCompiler/Debug/GizmoCompiler.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GizmoCompiler.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Gizmo/GizmoCompiler/compiler/: codeGenerator.cpp  codeGenerator.h  parser.cpp  parser.h  tokenCollection.h  tokenLine.cpp  tokenLine.h
Gizmo/Properties/: launchSettings.json
GizmoCompiler/Compiler/: codeGenerator.cpp  gizCompiler.cpp  lexer.cpp  lexer.h  parser.cpp  tokenCollection.cpp
GizmoCompiler/Debug/: GizmoCompiler.dll.recipe
GizmoCompiler/Debug/GizmoCompiler.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GizmoCompiler.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
GizmoExtension/: CHANGELOG.md  README.md  package-lock.json  package.json
GizmoTestProject/: main.giz  project.gizmo
GizmoTestProject/cppProject/: main.cpp
codeGenOut/: main.cpp
compiler/: codeGenerator.cpp  codeGenerator.h  gizCompiler.cpp  gizCompiler.h  lexer.cpp  lexer.h  parser.cpp  parser.h
sourceCode/: testSourceCode.giz
